--- a/style.css
+++ b/style.css
@@ -7,63 +7,54 @@
     --cor4: #F0F0EB;
     --cor5: #FFE849;
 }
-header{
-    background-color: var(--cor5);
-    min-height: 100px;
-    max-height: 600px;
+body{
     margin: 0px;
-    width: 100%;
-   
-}
-main{
-    margin: auto;
-    margin: center;
-    background-color: var(--cor4);
-    max-width: 1000px;
-    min-width: 250px;
- 
-}
-main > div{
-    margin: auto;
-}
-img{
-    width: 100%;
-}
-img > p{
-    font-size: 0.5em;
 }
 
-.link-autoral{
-   display: inline;
-   margin: 0px;
-   font-size: 0.8em;
+.template{
+    margin: 0px;
+    background-image: url('media/orquestra-1000px.jpg');
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    
+
 }
-aside{
-    width: 100%;
-    margin:0px
+header{
+    height: 20vh;
+    background-color: var(--cor5);
 }
 nav{
-    padding-top: 70px;
-    margin: 0px;
-
-}
-body{
-    height: 100vh;
-    background-image: url('./media/orquestra-1000px.jpg');
-    margin: 0px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
-article > p{
-    background-color: transparent;
-    
+    background-attachment: fixed;
 }
 main{
-    
+    height: 100vh;
+    margin: 0px;
+    background-color: var(--cor1);
+
 }
-p{
-  background-color: transparent;
-  left: auto;;
+footer{
+    height: 50vh;
+    background-color: var(--cor3);
+}
+#enter{
+   margin: 20px 50px;
+}
+h1{
+    margin: 0px;
+    text-align: center;
+}
+aside{
+    margin-top: 50px;
+    height: 200px;
+    width: 200px;
+    background-color: white;
+    display: inline-block;
+    margin-left: 5%;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
