--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@
     --cor3: #4D4D3D;
     --cor4: #F0F0EB;
     --cor5: #FFE849;
+    --font: 'Lato';
 }
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=M+PLUS+2:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body{
     margin: 0px;
+    font-family: var(--font);
 }
 
 .template{
@@ -20,6 +23,7 @@ body{
     background-position: center center;
     background-attachment: fixed;
     
+    
 
 }
 header{
@@ -27,7 +31,17 @@ header{
     background-color: var(--cor5);
 }
 nav{
-    background-attachment: fixed;
+    padding-top: 90px;
+    padding-left: 10px;
+}
+a.menu{
+    padding-left: 7vw;
+}
+a{
+    text-decoration: none;
+    color: var(--cor3);
+    font-weight: bolder;
+    position: relative;
 }
 main{
     height: 100vh;
@@ -45,16 +59,8 @@ footer{
 h1{
     margin: 0px;
     text-align: center;
-}
-aside{
-    margin-top: 50px;
-    height: 200px;
-    width: 200px;
-    background-color: white;
-    display: inline-block;
-    margin-left: 5%;
-    padding: 5px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    font-family: 'Lato';
+    color: rgb(48, 48, 48);
+    font-weight: bolder;
 }
 
